--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^10.0.0",
         "framer-motion": "^5.0.0",
         "install": "^0.13.0",
+        "jwt-decode": "^3.1.2",
         "next": "11.0.1",
         "next-images": "^1.8.1",
         "next-redux-wrapper": "^7.0.2",
