--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/event-emitter": "^1.1.1",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.7",
     "@nestjs/sequelize": "^8.0.0",
+    "@nestjs/websockets": "^8.4.7",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
+    "nest-emitter": "^1.1.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
